--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Restaurants</h2>
             <div class="flex-container">
             <article class="article--img-box flex-item">  
-                <a target="_blank" href="#">
+                <a target="_blank" href="menu-la-palette-du-gout.html">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                 </a>
                 <button class="new-tag">Nouveau</button>
@@ -61,7 +61,7 @@
                 </div> 
             </article>
             <article class="article--img-box flex-item">
-                <a target="_blank" href="#">
+                <a target="_blank" href="menu-la-note-enchantee.html">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 </a>
                 <button class="new-tag">Nouveau</button>
@@ -90,12 +90,12 @@
                 </div>
             </article>
             <article class="article--img-box flex-item">
-                <a target="_blank" href="#">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La délice des sens">
+                <a target="_blank" href="menu-le-delice-des-sens.html">
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 </a>
                 <div class="flex-row">
                    <div class="description-flex-item">
-                        <h3>La délice des sens</h3>
+                        <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                     </div>
                     <div class="icon-flex-item">
