--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/703ea3752e.js" crossorigin="anonymous"></script>
-    <title>À la française</title>
+    <title>La note enchantée</title>
 </head>
 <body>
     <header class="menu__header flex-row">
@@ -23,12 +23,12 @@
     </header>
     <main>
         <div>
-            <img class="menu__img" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+            <img class="menu__img" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
         </div>
         <article class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
-            <h1>À la française</h1>
+            <h1>La note enchantée</h1>
             </div>
             <div class="article--heart-icon">
             <a class="heart-icon" target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
@@ -41,8 +41,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="flex-item-right">
                             <p>25€</p>
@@ -53,8 +53,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="flex-item-right">
                             <p>35€</p>
@@ -65,8 +65,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange</p>
                         </div>
                         <div class="flex-item-right">
                             <p>20€</p>
@@ -74,7 +74,19 @@
                         <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
-            </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>35€</p>
+                        </div>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
+                    </div>
+                </div>
+                </div>
             </article>
             <article class="menu--courses">
                 <h2>PLATS</h2>
@@ -83,8 +95,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="flex-item-right">
                             <p>40€</p>
@@ -95,8 +107,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
                         <div class="flex-item-right">
                             <p>35€</p>
@@ -107,8 +119,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="flex-item-right">
                             <p>44€</p>
@@ -125,8 +137,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="flex-item-right">
                             <p>18€</p>
@@ -137,8 +149,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité</p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
                         <div class="flex-item-right">
                             <p>22€</p>
@@ -149,8 +161,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
                         </div>
                         <div class="flex-item-right">
                             <p>23€</p>
