--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/703ea3752e.js" crossorigin="anonymous"></script>
-    <title>À la française</title>
+    <title>La palette du goût</title>
 </head>
 <body>
     <header class="menu__header flex-row">
@@ -23,12 +23,12 @@
     </header>
     <main>
         <div>
-            <img class="menu__img" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+            <img class="menu__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
         </div>
         <article class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
-            <h1>À la française</h1>
+            <h1>La palette du goût</h1>
             </div>
             <div class="article--heart-icon">
             <a class="heart-icon" target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
@@ -41,8 +41,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
                         </div>
                         <div class="flex-item-right">
                             <p>25€</p>
@@ -53,8 +53,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="flex-item-right">
                             <p>35€</p>
@@ -65,8 +65,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="flex-item-right">
                             <p>20€</p>
@@ -83,8 +83,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="flex-item-right">
                             <p>40€</p>
@@ -95,8 +95,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="flex-item-right">
                             <p>35€</p>
@@ -107,8 +107,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
                         </div>
                         <div class="flex-item-right">
                             <p>44€</p>
@@ -125,8 +125,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité</p>
                         </div>
                         <div class="flex-item-right">
                             <p>18€</p>
@@ -137,8 +137,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité</p>
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="flex-item-right">
                             <p>22€</p>
@@ -149,8 +149,8 @@
                 <div class="dish-box flex-item">
                     <div class="dish-desc flex-row">
                         <div class="flex-item-left">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
+                            <h3>Mousse au chocolat</h3>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="flex-item-right">
                             <p>23€</p>
